==> roboard/86Duino/hardware/86duino/x86/libraries/Motor/AFMotor.cpp <==
#include "Arduino.h"
#include "AFMotor.h"
#include "mcm.h"

inline void initPWM1(uint8_t freq) {
	int pin = 11;
	int mc = 1, md = 1;
	 
	pinMode(pin, OUTPUT);
	
	if(freq == MOTOR12_64KHZ)       PWM1_freq = 1562L;
	else if(freq == MOTOR12_8KHZ)   PWM1_freq = 12500L;
	else if(freq == MOTOR12_2KHZ)   PWM1_freq = 50000L;
	else if(freq == MOTOR12_1KHZ)   PWM1_freq = 100000L;
	
    if(_initPWM1 == false)
	{
	    // Init H/W PWM
	    io_DisableINT();

		mcpwm_ReloadPWM(mc, md, MCPWM_RELOAD_CANCEL);
		mcpwm_SetOutMask(mc, md, MCPWM_HMASK_NONE + MCPWM_LMASK_NONE);
		mcpwm_SetOutPolarity(mc, md, MCPWM_HPOL_NORMAL + MCPWM_LPOL_NORMAL);
		mcpwm_SetDeadband(mc, md, 0L);
		mcpwm_ReloadOUT_Unsafe(mc, md, MCPWM_RELOAD_NOW);
		
		mcpwm_SetWaveform(mc, md, MCPWM_EDGE_A0I1);
		mcpwm_SetSamplCycle(mc, md, 1999L);   // sample cycle: 20ms
		
		crossbar_ioaddr = sb_Read16(0x64)&0xfffe;
		if (pin <= 9)
			io_outpb(crossbar_ioaddr + 2, 0x01); // GPIO port2: 0A, 0B, 0C, 3A
		else if (pin > 28)
	    	io_outpb(crossbar_ioaddr, 0x03); // GPIO port0: 2A, 2B, 2C, 3C
		else
			io_outpb(crossbar_ioaddr + 3, 0x02); // GPIO port3: 1A, 1B, 1C, 3B

		io_RestoreINT();
		_initPWM1 = true;
	}   
	
	io_DisableINT();
	mcpwm_SetWidth(mc, md, PWM1_freq - 1L, (PWM1_freq - 1L)/2L); // 50% duty
	mcpwm_ReloadPWM(mc, md, MCPWM_RELOAD_PEREND);
	mcpwm_Enable(mc, md);
	io_outpb(crossbar_ioaddr + 0x90 + pinMap[pin], 0x08);
	io_RestoreINT();
}

inline void setPWM1(uint8_t s) {
	int pin = 11;
	int mc = 1, md = 1;
	
	if (s == 0L)
		digitalWrite(pin, LOW);
	else if (s >= 256)
		digitalWrite(pin, HIGH);
	else
	{
		if(_initPWM1 == true)
		{
			mcpwm_SetWidth(mc, md, PWM1_freq - 1L, (PWM1_freq*s/255L) - 1L);
			mcpwm_ReloadPWM(mc, md, MCPWM_RELOAD_PEREND);
			io_outpb(crossbar_ioaddr + 0x90 + pinMap[pin], 0x08);
		}
	}
}

inline void initPWM2(uint8_t freq) {
	int pin = 3;
	int mc = 3, md = 0;
	
	pinMode(pin, OUTPUT);
	
	if(freq == MOTOR12_64KHZ)       PWM2_freq = 1562L;
	else if(freq == MOTOR12_8KHZ)   PWM2_freq = 12500L;
	else if(freq == MOTOR12_2KHZ)   PWM2_freq = 50000L;
	else if(freq == MOTOR12_1KHZ)   PWM2_freq = 100000L;
	
    if(_initPWM2 == false)
	{
	    // Init H/W PWM
	    io_DisableINT();

		mcpwm_ReloadPWM(mc, md, MCPWM_RELOAD_CANCEL);
		mcpwm_SetOutMask(mc, md, MCPWM_HMASK_NONE + MCPWM_LMASK_NONE);
		mcpwm_SetOutPolarity(mc, md, MCPWM_HPOL_NORMAL + MCPWM_LPOL_NORMAL);
		mcpwm_SetDeadband(mc, md, 0L);
		mcpwm_ReloadOUT_Unsafe(mc, md, MCPWM_RELOAD_NOW);
		
		mcpwm_SetWaveform(mc, md, MCPWM_EDGE_A0I1);
		mcpwm_SetSamplCycle(mc, md, 1999L);   // sample cycle: 20ms
		
		crossbar_ioaddr = sb_Read16(0x64)&0xfffe;
		if (pin <= 9)
			io_outpb(crossbar_ioaddr + 2, 0x01); // GPIO port2: 0A, 0B, 0C, 3A
		else if (pin > 28)
	    	io_outpb(crossbar_ioaddr, 0x03); // GPIO port0: 2A, 2B, 2C, 3C
		else
			io_outpb(crossbar_ioaddr + 3, 0x02); // GPIO port3: 1A, 1B, 1C, 3B

		io_RestoreINT();
		_initPWM2 = true;
	}   
	
	io_DisableINT();
	mcpwm_SetWidth(mc, md, PWM2_freq - 1L, (PWM2_freq - 1L)/2L); // 50% duty
	mcpwm_ReloadPWM(mc, md, MCPWM_RELOAD_PEREND);
	mcpwm_Enable(mc, md);
	io_outpb(crossbar_ioaddr + 0x90 + pinMap[pin], 0x08);
	io_RestoreINT();
}

inline void setPWM2(uint8_t s) {
	int pin = 3;
	int mc = 3, md = 0;
	
	if (s == 0L)
		digitalWrite(pin, LOW);
	else if (s >= 256)
		digitalWrite(pin, HIGH);
	else
	{
		if(_initPWM2 == true)
		{
			mcpwm_SetWidth(mc, md, PWM2_freq - 1L, (PWM2_freq*s/255L) - 1L);
			mcpwm_ReloadPWM(mc, md, MCPWM_RELOAD_PEREND);
			io_outpb(crossbar_ioaddr + 0x90 + pinMap[pin], 0x08);
		}
	}
}

inline void initPWM3(uint8_t freq) {
	int pin = 6;
	int mc = 0, md = 1;

	pinMode(pin, OUTPUT);
	
	if(freq == MOTOR34_64KHZ)       PWM3_freq = 1562L;
	else if(freq == MOTOR34_8KHZ)   PWM3_freq = 12500L;
	else if(freq == MOTOR34_1KHZ)   PWM3_freq = 100000L;
	
    if(_initPWM3 == false)
	{
	    // Init H/W PWM
	    io_DisableINT();

		mcpwm_ReloadPWM(mc, md, MCPWM_RELOAD_CANCEL);
		mcpwm_SetOutMask(mc, md, MCPWM_HMASK_NONE + MCPWM_LMASK_NONE);
		mcpwm_SetOutPolarity(mc, md, MCPWM_HPOL_NORMAL + MCPWM_LPOL_NORMAL);
		mcpwm_SetDeadband(mc, md, 0L);
		mcpwm_ReloadOUT_Unsafe(mc, md, MCPWM_RELOAD_NOW);
		
		mcpwm_SetWaveform(mc, md, MCPWM_EDGE_A0I1);
		mcpwm_SetSamplCycle(mc, md, 1999L);   // sample cycle: 20ms
		
		crossbar_ioaddr = sb_Read16(0x64)&0xfffe;
		if (pin <= 9)
			io_outpb(crossbar_ioaddr + 2, 0x01); // GPIO port2: 0A, 0B, 0C, 3A
		else if (pin > 28)
	    	io_outpb(crossbar_ioaddr, 0x03); // GPIO port0: 2A, 2B, 2C, 3C
		else
			io_outpb(crossbar_ioaddr + 3, 0x02); // GPIO port3: 1A, 1B, 1C, 3B

		io_RestoreINT();
		_initPWM3 = true;
	}   
	
	io_DisableINT();
	mcpwm_SetWidth(mc, md, PWM3_freq - 1L, (PWM3_freq - 1L)/2L); // 50% duty
	mcpwm_ReloadPWM(mc, md, MCPWM_RELOAD_PEREND);
	mcpwm_Enable(mc, md);
	io_outpb(crossbar_ioaddr + 0x90 + pinMap[pin], 0x08);
	io_RestoreINT();
}

inline void setPWM3(uint8_t s) {
	int pin = 6;
	int mc = 0, md = 1;
	
	if (s == 0L)
		digitalWrite(pin, LOW);
	else if (s >= 256)
		digitalWrite(pin, HIGH);
	else
	{
		if(_initPWM3 == true)
		{
			mcpwm_SetWidth(mc, md, PWM3_freq - 1L, (PWM3_freq*s/255L) - 1L);
			mcpwm_ReloadPWM(mc, md, MCPWM_RELOAD_PEREND);
			io_outpb(crossbar_ioaddr + 0x90 + pinMap[pin], 0x08);
		}
	}
}

static void initPWM4(uint8_t freq) {
	int pin = 5;
	int mc = 0, md = 2; // need to indicate
    
	pinMode(pin, OUTPUT);
	
	if(freq == MOTOR34_64KHZ)       PWM4_freq = 1562L;
	else if(freq == MOTOR34_8KHZ)   PWM4_freq = 12500L;
	else if(freq == MOTOR34_1KHZ)   PWM4_freq = 100000L;
	    
    if(_initPWM4 == false)
	{
	    // Init H/W PWM
	    io_DisableINT();

		mcpwm_ReloadPWM(mc, md, MCPWM_RELOAD_CANCEL);
		mcpwm_SetOutMask(mc, md, MCPWM_HMASK_NONE + MCPWM_LMASK_NONE);
		mcpwm_SetOutPolarity(mc, md, MCPWM_HPOL_NORMAL + MCPWM_LPOL_NORMAL);
		mcpwm_SetDeadband(mc, md, 0L);
		mcpwm_ReloadOUT_Unsafe(mc, md, MCPWM_RELOAD_NOW);
		
		mcpwm_SetWaveform(mc, md, MCPWM_EDGE_A0I1);
		mcpwm_SetSamplCycle(mc, md, 1999L);   // sample cycle: 20ms
		
		crossbar_ioaddr = sb_Read16(0x64)&0xfffe;
		if (pin <= 9)
			io_outpb(crossbar_ioaddr + 2, 0x01); // GPIO port2: 0A, 0B, 0C, 3A
		else if (pin > 28)
	    	io_outpb(crossbar_ioaddr, 0x03); // GPIO port0: 2A, 2B, 2C, 3C
		else
			io_outpb(crossbar_ioaddr + 3, 0x02); // GPIO port3: 1A, 1B, 1C, 3B

		io_RestoreINT();
		_initPWM4 = true;
	}   
	
	io_DisableINT();
	mcpwm_SetWidth(mc, md, PWM4_freq - 1L, (PWM4_freq - 1L)/2L); // 50% duty
	mcpwm_ReloadPWM(mc, md, MCPWM_RELOAD_PEREND);
	mcpwm_Enable(mc, md);
	io_outpb(crossbar_ioaddr + 0x90 + pinMap[pin], 0x08);
	io_RestoreINT();
}

void setPWM4(uint8_t s) {
	int pin = 5;
	int mc = 0, md = 2;
	
	if (s == 0L)
		digitalWrite(pin, LOW);
	else if (s >= 256)
		digitalWrite(pin, HIGH);
	else
	{
		if(_initPWM4 == true)
		{
			mcpwm_SetWidth(mc, md, PWM4_freq - 1L, (PWM4_freq*s/255L) - 1L);
			mcpwm_ReloadPWM(mc, md, MCPWM_RELOAD_PEREND);
			io_outpb(crossbar_ioaddr + 0x90 + pinMap[pin], 0x08);
		}
	}
}
